src2/objects/NES_NotableEvent__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>IF(ISBLANK( NES_Account__c ),&quot;&quot;, NES_Account__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTelemetryName__c</fullName>
        <description>Field to show the Account Telemetry Name in Email Templates</description>
        <formula>NES_Account__r.Account_Telemetry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemetry Account  Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTelemetry__c</fullName>
        <formula>IF( 
!CONTAINS($Api.Partner_Server_URL_410, &apos;skyline&apos;), 
HYPERLINK(&quot;/&quot; &amp; NES_Account__r.Account_Telemetry__c, NES_Account__r.Account_Telemetry__r.Name), 
HYPERLINK(&quot;/skyline/s/nes-accounttelemetry/&quot; &amp; NES_Account__r.Account_Telemetry__c, NES_Account__r.Account_Telemetry__r.Name) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemetry Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Notable Events (Asset Module)</relationshipLabel>
        <relationshipName>Notable_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror Chassis</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module Mirror</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Notable Events (Contract Line Item Module Mirror)</relationshipLabel>
        <relationshipName>Notable_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Notable Events (Contract Line Item Module)</relationshipLabel>
        <relationshipName>Notable_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Current_Account__c</fullName>
        <formula>NES_Account__r.Id =  NES_Asset__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Account Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notable Events (Module Account)</relationshipLabel>
        <relationshipName>Module_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_AssetNickname__c</fullName>
        <formula>NES_Asset__r.NES_Nickname__c</formula>
        <label>Asset Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_AssetSerialNumber__c</fullName>
        <formula>NES_Asset__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and time when the event was triggered (may be different than the creation date)</description>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_EventCode__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventValidity__c</fullName>
        <label>Event Validity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm Valid</fullName>
                </value>
                <value>
                    <fullName>Alarm Actionable</fullName>
                </value>
                <value>
                    <fullName>Resolution Mismatch to Alarm</fullName>
                </value>
                <value>
                    <fullName>Alarm Not Actionable</fullName>
                </value>
                <value>
                    <fullName>Alarm Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Event_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Log</label>
        <referenceTo>NES_EventLog__c</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_HandledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_HandledDate__c</fullName>
        <description>Date when the status of the Notable event was set to Handled</description>
        <label>Handled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_NoOfTasks__c</fullName>
        <description>Auto-populated Task Counter</description>
        <inlineHelpText>Shows the number of tasks associated to the Notable Event</inlineHelpText>
        <label>No of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Handled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Component Breakdown</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Machine Maintenance</fullName>
                </value>
                <value>
                    <fullName>Backend</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Best_Action__c</fullName>
        <description>Next Best Action to be triggered once a Notable Event is raised</description>
        <label>Next Best Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NextBestAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfCompletedTasks__c</fullName>
        <label>No of Completed Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_TC_Date__c</fullName>
        <formula>IF(ISNULL(NES_ContractLineItem__c), null, NES_ContractLineItem__r.Start_TC_Date__c)</formula>
        <label>Start TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notable Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AccountNumber__c</columns>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Status__c</columns>
        <columns>NES_HandledBy__c</columns>
        <columns>NES_HandledDate__c</columns>
        <columns>Next_Best_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>00: All Notable Events</label>
    </listViews>
    <listViews>
        <fullName>Breakdowns</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Status__c</columns>
        <columns>NES_HandledBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Type__c</field>
            <operation>equals</operation>
            <value>Component Breakdown</value>
        </filters>
        <label>Breakdowns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Handled</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_HandledBy__c</columns>
        <columns>NES_HandledDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Status__c</field>
            <operation>equals</operation>
            <value>Handled</value>
        </filters>
        <label>02: Handled Notable Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Maintenances</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Type__c</field>
            <operation>equals</operation>
            <value>Machine Maintenance</value>
        </filters>
        <label>Maintenances</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unhandled_Notable_Events</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Priority__c</columns>
        <columns>NES_Type__c</columns>
        <columns>NES_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>01: Unhandled Notable Events</label>
    </listViews>
    <listViews>
        <fullName>X03_Notable_Event_Contract_Inactive</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_Description__c</columns>
        <columns>NES_Status__c</columns>
        <columns>NES_HandledBy__c</columns>
        <columns>NES_NoOfTasks__c</columns>
        <columns>NES_HandledDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>03: Notable Event (Contract Expired)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notable Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NES_StatusFromHandledToOpen</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(NES_Status__c), &apos;Handled&apos;) &amp;&amp; ISPICKVAL(NES_Status__c, &apos;Open&apos;)</errorConditionFormula>
        <errorMessage>Once Status has been changed to  &quot;Handled&quot; is cannot be changed back to &quot;Open&quot;.</errorMessage>
    </validationRules>
</CustomObject>